[gd_scene load_steps=31 format=2]

[ext_resource path="res://images/The Council.png" type="Texture" id=1]
[ext_resource path="res://scenes/Ben.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/TheCouncil.gd" type="Script" id=3]
[ext_resource path="res://scenes/Cinematograph.tscn" type="PackedScene" id=4]
[ext_resource path="res://music/council.ogg" type="AudioStream" id=5]
[ext_resource path="res://sounds/footsteps_hallway.ogg" type="AudioStream" id=6]
[ext_resource path="res://images/receptionist/speaking.png" type="Texture" id=7]
[ext_resource path="res://images/receptionist/idle/0017.png" type="Texture" id=8]
[ext_resource path="res://images/receptionist/idle/0019.png" type="Texture" id=9]
[ext_resource path="res://images/receptionist/idle/0018.png" type="Texture" id=10]
[ext_resource path="res://images/receptionist/idle/0000.png" type="Texture" id=11]
[ext_resource path="res://images/receptionist/idle/0004.png" type="Texture" id=12]
[ext_resource path="res://images/receptionist/idle/0014.png" type="Texture" id=13]
[ext_resource path="res://images/receptionist/idle/0016.png" type="Texture" id=14]
[ext_resource path="res://images/receptionist/idle/0001.png" type="Texture" id=15]
[ext_resource path="res://images/receptionist/idle/0007.png" type="Texture" id=16]
[ext_resource path="res://images/receptionist/idle/0020.png" type="Texture" id=17]
[ext_resource path="res://images/receptionist/idle/0012.png" type="Texture" id=18]
[ext_resource path="res://images/receptionist/idle/0013.png" type="Texture" id=19]
[ext_resource path="res://images/receptionist/idle/0015.png" type="Texture" id=20]
[ext_resource path="res://images/receptionist/idle/0002.png" type="Texture" id=21]
[ext_resource path="res://images/receptionist/idle/0003.png" type="Texture" id=22]
[ext_resource path="res://images/receptionist/glitch.png" type="Texture" id=23]
[ext_resource path="res://images/receptionist/idle/0006.png" type="Texture" id=24]
[ext_resource path="res://images/receptionist/idle/0005.png" type="Texture" id=25]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "speaking",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 23 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 23 ), ExtResource( 7 ) ],
"loop": false,
"name": "glitch",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 15 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 12 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 13 ), ExtResource( 20 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 17 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "entry"
length = 9.0
tracks/0/type = "value"
tracks/0/path = NodePath("Shader:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 6.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Music:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.1, 3.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("Sounds")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0.8 )
}

[sub_resource type="Animation" id=3]
length = 7.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.4, 6.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ true ],
"method": "ben_standup"
}, {
"args": [  ],
"method": "to_doors"
}, {
"args": [  ],
"method": "to_revelations"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shader:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5.6, 5.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Music:stream_paused")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "receptionist glitch"
tracks/0/type = "method"
tracks/0/path = NodePath("Receptionist")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "glitch", false ],
"method": "play"
}, {
"args": [ "speaking", false ],
"method": "play"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Cinematograph")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "4_receptionistc" ],
"method": "play_scene"
} ]
}

[sub_resource type="Animation" id=5]
length = 5.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "ben_standup"
}, {
"args": [  ],
"method": "ben_wait"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Cinematograph")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 4.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "4_thoughts" ],
"method": "play_scene"
} ]
}

[node name="TheCouncil" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
centered = false

[node name="Hotspots" type="Node" parent="."]

[node name="Reception" type="TextureButton" parent="Hotspots"]
margin_left = 475.0
margin_top = 319.0
margin_right = 675.0
margin_bottom = 505.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Receptionist" type="TextureButton" parent="Hotspots"]
margin_left = 703.0
margin_top = 322.0
margin_right = 1160.0
margin_bottom = 508.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Poster" type="TextureButton" parent="Hotspots"]
margin_left = 1191.0
margin_top = 329.0
margin_right = 1306.0
margin_bottom = 508.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Doors" type="TextureButton" parent="Hotspots"]
margin_left = 1435.25
margin_top = 247.46
margin_right = 1914.25
margin_bottom = 693.46
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Infocomm" type="TextureButton" parent="Hotspots"]
margin_left = 827.0
margin_top = 654.0
margin_right = 1192.0
margin_bottom = 924.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaitingArea" type="TextureButton" parent="Hotspots"]
margin_left = -9.0
margin_top = 634.0
margin_right = 346.0
margin_bottom = 813.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Receptionist" type="AnimatedSprite" parent="."]
position = Vector2( 916.604, 426.178 )
scale = Vector2( 0.554819, 0.554819 )
frames = SubResource( 1 )
animation = "idle"
frame = 33
playing = true

[node name="Ben" parent="." instance=ExtResource( 2 )]
position = Vector2( 304.888, 739.627 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "music"

[node name="Sounds" type="AudioStreamPlayer" parent="."]
bus = "sound"

[node name="Animations" type="AnimationPlayer" parent="."]
autoplay = "entry"
anims/entry = SubResource( 2 )
"anims/last walk" = SubResource( 3 )
"anims/receptionist glitch" = SubResource( 4 )
anims/waiting = SubResource( 5 )

[node name="Shader" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cinematograph" parent="." instance=ExtResource( 4 )]
margin_left = -13.7551
margin_top = -20.6325
margin_right = -13.7551
margin_bottom = -20.6326
[connection signal="pressed" from="Hotspots/Reception" to="." method="_on_Reception_pressed"]
[connection signal="pressed" from="Hotspots/Receptionist" to="." method="_on_Receptionist_pressed"]
[connection signal="pressed" from="Hotspots/Poster" to="." method="_on_Poster_pressed"]
[connection signal="pressed" from="Hotspots/Doors" to="." method="_on_Doors_pressed"]
[connection signal="pressed" from="Hotspots/Infocomm" to="." method="_on_Infocomm_pressed"]
[connection signal="pressed" from="Hotspots/WaitingArea" to="." method="_on_WaitingArea_pressed"]
[connection signal="target_reached" from="Ben" to="." method="_on_Ben_target_reached"]
[connection signal="finished" from="Cinematograph" to="." method="_on_Cinematograph_finished"]
